--- a/JamiyahMadrash/Models/JAMIYAHSALAFIYAH.Context.tt
+++ b/JamiyahMadrash/Models/JAMIYAHSALAFIYAH.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"JAMIYAHMADRASHA.edmx";
+const string inputFile = @"JAMIYAHSALAFIYAH.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
